# arts

./: .gitmodules  CMakeLists.txt  config.h.cmake
actions/pypi/: Dockerfile  build_arts.sh
cmake/modules/: FindSHTns.cmake
controlfiles/artscomponents/scattering/: absorption_vector_stokes_2.xml  bulk_extinction_stokes_1.xml  extinction_matrices_stokes_2.xml  run_disort.py  run_rt4.py  scattering_habit_bulk_properties.py  scattering_matrices_stokes_2.xml
controlfiles/artscomponents/scattering/test_data/: meta_data_simple.xml  scat_data_simple.xml  (+1 more)
controlfiles/artscomponents/ssdb/: read_particles.py
python/: CMakeLists.txt
python/pyarts/bindings/: CMakeLists.txt  __init__.py  bindings.cc  casters.h  messages.cc  scattering_particle.cc  single_scattering_data.cc  xml_io.cc
python/pyarts/workspace/: methods.py  variables.py  workspace.py
python/pyarts/xml/: __init__.py  read.py
python/test/workspace/: test_methods.py
src/: CMakeLists.txt  absorption.cc  absorption.h  agendas.cc  disort.cc  disort.h  eigen.h  groups.cc  interactive_workspace.cc  lin_alg.cc  linefunctions.cc  m_append.cc  m_append.h  m_arts_ssdb.cc  m_cloudradar.cc  m_disort.cc  m_oem.cc  m_psd.cc  m_rt4.cc  m_scattering.cc  m_scattering_habit.cc  m_scattering_species.cc  m_select.cc  m_select.h  make_auto_md_h.cc  make_workspace_memory_handler_cc.cc  matpackI.h  methods.cc  optproperties.h  rt4.cc  rt4.h  scattering.cc  scattering.h  scattering_habit.cc  scattering_habit.cxx  scattering_habit.h  scattering_species.cc  scattering_species.cxx  scattering_species.h  workspace.cc  (+4 more)
